[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6.18", features = ["macros"] }
hyper = "0.14.23"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
simple-db = { git = "https://github.com/GodaHaruki/simple-db.git", version = "0.1.0" }
